--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -12,7 +12,8 @@ html {
 
 html,
 body {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   width: 100%;
